# cookie-jar

./: .env.example  .gitignore  Anchor.toml  DEMO_SCRIPT.md  README.md  README_HACKATHON.md  SUBMISSION.md  demo.html  package-lock.json  package.json
programs/tipbot/: Anchor.toml  Cargo.toml
programs/tipbot/src/: lib.rs
scripts/: deploy.js  initMaster.js  initMasterRaw.js  registerUser.js  testRegistration.js
src/: index.ts
src/parser/: tipParser.ts
src/registry/: walletRegistry.ts
src/solana/: idl.json  onChainService.ts  programClient.ts  transfer.ts
src/twitter/: bot.ts
