[package]
name = "tipbot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tipbot"

[features]
default = []
no-entrypoint = []
idl-build = []
no-idl = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "=0.29.0"
blake3 = "=1.5.1"

[profile.release]
overflow-checks = true
